# FM-Solver

./: LICENSE  README.md  pyproject.toml
fm_solver/feature_model/: __init__.py  feature.py  feature_model.py  generation.py  restriction.py
fm_solver/translator/: __init__.py  cnf_translator.py  mini_zinc_arithmetic_translator.py  xcsp3_arithmetic_translator.py
fm_solver/translators/: __init__.py  mini_zinc_arithmetic_translator.py  translator.py
tests/feature_model/: test_feature.py  test_feature_model.py  test_restriction.py
