[tool.poetry]
name = "fm-solver"
version = "0.1.0"
description = ""
authors = ["Francisco J. Piedrahíta-Vélez"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.8.0"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
